--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <article>
             <img src="content/blad.png" alt="Illustratie van een groen blaadje">
             <h2>EcoVintageFinds</h2>
-            <p> Welkom bij EcoVintageFinds! Ontdek de beste eco-vriendelijke vintage winkels in Amsterdam, allemaal
-                verzameld op één plek! Elke maand spotlight ik een andere winkel, zodat deze een hele maand lang extra
-                aandacht en publiek krijgt. Wil je weten welke winkel binnenkort aan bod komt? Volg mijn sociale media
-                voor het aankomende rooster! En als jouw favoriete eco-vriendelijke winkel er nog niet tussen staat,
-                laat het me vooral weten. Samen maken we Amsterdam groener!</p>
+            <p>Welkom bij de plek voor de beste ecovriendelijke vintage winkels! Ik vind alle "goede" winkels voor je in
+                Amsterdam en daar wil ik het graag met je over hebben! Elke maand een andere winkel. Dit doe ik zodat ik
+                een maand lang de tijd heb om de vintage winkel meer reclame en publiek te geven! Op mijn sociale media
+                kun je een rooster ontvangen van de aankomende winkels! Staat jouw favoriete ecovriendelijke winkel er
+                nog niet tussen? Stuur me vooral een berichtje!</p>
         </article>
 
         <article class="kleur">
@@ -48,11 +48,11 @@
         </article>
 
         <Article class="poppetje1">
-            <p>Hey, ik ben Luna Heeremans, 20 jaar oud en al 7 jaar lang ben ik gepassioneerd bezig met vintage shoppen.
-                Ik ben ontzettend blij dat winkels tegenwoordig meer aandacht besteden aan eco-vriendelijkheid, iets wat
-                voor mij erg belangrijk is. Ik besloot mijn twee passies te delen en zo is deze website ontstaan. Hier
-                ga ik voor jullie op zoek naar alle eco-vriendelijke winkels en deel ik mijn bevindingen graag met
-                jullie.</p>
+            <p>Mijn naam is Luna Heeremans en ik ben 20 jaar. 7 jaar hiervan heb ik toegewijd aan vintage shoppen. De
+                laatste tijd hebben winkels eindelijk besloten om
+                meer eco vriendelijk te worden. Dit vind ik zelf super belangrijk, daarom ben ik erg blij dat de vintage
+                winkels meedoen. Nu dacht ik waarom deel ik niet mijn twee passies met jullie? Dat is hoe ik bij deze
+                website ben gekomen, ik ga voor jullie alle eco vriendelijke winkels zoeken en erover vertellen.</p>
         </Article>
 
         <img src="content/ik.jpg" alt="een foto van Luna Heeremans maker van de site met een graffiti achtergrond.">
