--- a/over.html
+++ b/over.html
@@ -28,15 +28,14 @@
         </article>
 
         <article class="kleur">
-            <p>Wat leuk dat je mijn eerste reclamereview leest! Dit bericht zal de komende maand online staan, zodat het
-                bedrijf meer exposure krijgt. 'Bij Ons' is een geweldige winkel in het achterste gedeelte van het
-                centrum van Amsterdam! Ik bezocht de winkel twee weken geleden en het was een groot succes. Ik zal hier
-                zeker vaker naartoe gaan, want de sfeer in de winkel is gezellig en warm. Het doel van de winkel, waar
-                iedereen welkom is, wordt duidelijk gecommuniceerd.
-                Persoonlijk geef ik de winkel 4 sterren op het gebied van eco-vriendelijkheid. De winkel toont
-                consequent video's over hoe zij hun winkel eco-vriendelijk behouden, met de nadruk op 'Reduse, Reuse,
-                Recycle'. Ik vind het fantastisch dat ze dit op verschillende manieren in de winkel uitdragen. Hierdoor
-                blijft hun ecologische doel zeker bij de bezoekers hangen.</p>
+            <p>Super leuk dat je mijn eerste reclame review leest! De aankomende maand zal dit bericht online staan! Zo
+                krijgt het bedrijf meer publicatie. Bij Ons is een gave winkel in het achterste gedeelte van Amsterdam
+                centrum! Ik was er 2 weken geleden en dit is een groot succes! Ik ga hier dus ook zeker vaker heen, het
+                is een gezellig en warm sfeertje in de winkel. het doel van de winkel met iedereen is welkom is dus
+                zeker weten duidelijk. Persoonlijk geef ik de winkel 4 sterren op eco vriendelijk, de winkel laat
+                consistent video’s zien over hoe hun de winkel eco vriendelijk behouden. Dit geven ze aan door: Reduse,
+                Reuse, Recycle. Ik vind het zeker heel mooi dat hun dit overal extra overbrengen door de winkel. Zo
+                blijft hun eco doel zeker vast hangen.</p>
             <img src="content/kleding.jpg" alt="Drie paspoppen met kleding aan in een vintagewinkel.">
         </article>
 
@@ -48,11 +47,10 @@
 
         <article>
             <h2>The message</h2>
-            <p>Het mooie aan deze winkel is dat iedereen welkom is; het is een genderneutrale vintage winkel. Daarnaast
-                willen ze hun duidelijke eco-vriendelijke missie benadrukken. Ze geloven dat door vintage kleding bij
-                hen te kopen, je een positieve impact hebt op de mode-industrie. In deze industrie wordt namelijk veel
-                weggegooid. Door oude kleding een nieuw leven te geven, dragen ze bij aan het verminderen van
-                verspilling en het behoud van het milieu.</p>
+            <p>Hun bericht is dat iedereen welkom is, dit is namelijk een genderneutrale vintage winkel. Ook willen ze
+                hun doel erg duidelijk maken dat dit eco vriendelijk is. zo vinden ze dat als je vintage kleding bij hun
+                koopt je een verhoging maakt met de impact van de “fashion industrie” dit is ook zo, alles wordt
+                namelijk vaak weggegooid. ook geef je zo een nieuw leven aan oude kleding.</p>
         </article>
 
 
